--- a/views/projectDetails.html
+++ b/views/projectDetails.html
@@ -11,6 +11,7 @@
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
 </head>
 
 <body style="overflow-x: hidden; overflow-y: hidden;">
@@ -30,19 +31,11 @@
         <input type="text" class="register-input" id="newBid"> <br><br>
         <label> Comments </label><br>
         <textarea id="comments" rows="4" cols="50"></textarea><br>
-        <button id="submitBidButton">Submit</button>
+        <button id="submitBidButton" onclick="submitBid()">Submit</button>
     </form>
-    <a href="/projects" id="link" style="display:none"> </a>
+    <a href="/profile" id="link" style="display:none"> </a>
+    <table id="bidsTable"> </table>
 
-    <!-- <h1 class="login-title">Login</h1>
-    <form class="login">
-        <input type="email" class="register-input" id="email" placeholder="Email address">
-        <input type="password" class="register-input" id="password" placeholder="Password">
-        <p id="error"></p>
-        <button type="button" onclick="login()">Sign In</button>
-        <p style = "margin-top:20px;">Don't have an account? <a href = "/register">Sign Up!</a></p>
-    </form>
-    <a href="/profile" id="link" style="display:none"> </a> -->
 </body>
 
 <script>
@@ -53,7 +46,10 @@
     var service = "{{ service }}";
     var lowestBid = "{{ lowestBid }}";
     var description = "{{ description }}";
-    var key = "{{ key }}";
+    var projKey = "{{ key }}";
+    var creator = "{{ creator }}";
+    console.log(projKey)
+    console.log(creator)
 
     var config = {
         apiKey: "AIzaSyBljIAXQPP9f9FJ9LTHuVlZJZkpajvmZj4",
@@ -71,44 +67,45 @@
         }
     })
 
+    var keys=[];
 
-    var query = firebase.database().ref("projects/" + key).orderByKey();
-        query.once("value")
-        .then(function(snapshot) {
-            snapshot.forEach(function(childSnapshot) {
-                var key = childSnapshot.key;
-                console.log(key)
-                keys.push(key);
-            });
-
-            firebase.database().ref('/projects').once('value').then(function(snapshot) {
-                for (var x=0; x < snapshot.numChildren(); x++){
-                    var table = document.getElementById("projectsTable");
-
-                    var row = table.insertRow(0);
-                    var cell1 = row.insertCell(0);
-                    var cell2 = row.insertCell(1);
-                    var cell3 = row.insertCell(2);
-                    var cell4 = row.insertCell(3);
-                    var cell5 = row.insertCell(4);
-                    var cell6 = row.insertCell(5);
-                    var button = row.insertCell(6);
-
-                    cell1.innerHTML = snapshot.val()[keys[x]]["name"]
-                    cell2.innerHTML = snapshot.val()[keys[x]]["category"]
-                    cell3.innerHTML = snapshot.val()[keys[x]]["location"]
-                    cell4.innerHTML = snapshot.val()[keys[x]]["service"];
-                    cell5.innerHTML = snapshot.val()[keys[x]]["lowestBid"]
-                    cell6.innerHTML = snapshot.val()[keys[x]]["description"]
-
-                    button.innerHTML = '<form action="/projectDetails" method="post"> <input type="text" style="display:none" name="name" class="register-input" value="'+ snapshot.val()[keys[x]]["name"] + '"> <input type="text" style="display:none" name="category" class="register-input" value="'+ snapshot.val()[keys[x]]["category"] + '"> <input type="text" style="display:none" name="location" class="register-input" value="'+ snapshot.val()[keys[x]]["location"] + '"> <input type="text" style="display:none" name="service" class="register-input" value="'+ snapshot.val()[keys[x]]["service"] + '"> <input type="text" style="display:none" name="lowestBid" class="register-input" value="'+ snapshot.val()[keys[x]]["lowestBid"] + '"> <input type="text" style="display:none" name="description" class="register-input" value="'+ snapshot.val()[keys[x]]["description"] + '"> <input type="text" style="display:none" name="key" class="register-input" value="' + userKeys[x] + '"> <button id="details" value="upvote">Details</button></form>';
-                }
-            })
+    var query = firebase.database().ref("projects/" + projKey + '/bids').orderByKey();
+    query.once("value")
+    .then(function(snapshot) {
+        snapshot.forEach(function(childSnapshot) {
+            var tempkey = childSnapshot.key;
+            // console.log(key)
+            keys.push(tempkey);
         });
+
+        firebase.database().ref('/projects' + '/' + projKey + '/bids').once('value').then(function(snapshot) {
+            for (var x=0; x < snapshot.numChildren(); x++){
+                var table = document.getElementById("bidsTable");
+
+                var row = table.insertRow(0);
+                var cell1 = row.insertCell(0);
+                var cell2 = row.insertCell(1);
+                var cell3 = row.insertCell(2);
+
+                var username = "";
+                console.log(snapshot.val())
+                console.log(keys[x]);
+                firebase.database().ref('/users/' + keys[x] + '/username').once('value').then(function(snapshot2){
+
+                    console.log(snapshot2.val());
+
+                    username = snapshot2.val()["username"];
+                    cell1.innerHTML = username
+                    cell2.innerHTML = snapshot.val()[keys[x]]["bid"]
+                })
+            }
+        })
+    });
 
 
     function submitBid(){
         var postData = {
+            user:userId,
             bid:document.getElementById("newBid").value,
             comments:document.getElementById("comments").value
         };
@@ -118,11 +115,14 @@
         var updates = {};
         updates['/projects/' + key + '/bids/' + postKey] = postData;
         firebase.database().ref().update(updates);
-        // var postKey2 = firebase.database().ref().child('/users/' + userId + '/helper/' + key).push().key;
-        // var updates2 = {};
-        // updates2['/users/'  + userId + '/helper/' + postKey2] = postData;
-        // firebase.database().ref().update(updates2);
-        // window.location = document.getElementById("link").href 
+
+        var postKey2 = firebase.database().ref().child('users').child(key).child('bids').push().key;
+
+        var updates = {};
+        updates['/projects/' + key + '/bids/' + postKey] = postData;
+        firebase.database().ref().update(updates);
+
+        window.location = document.getElementById("link").href;
     }
 </script>
 
