--- a/views/profile.html
+++ b/views/profile.html
@@ -51,8 +51,6 @@
             <option value="category" selected>Category</option>
             <option value="location">Location</option>
         </select>
-        <!-- <input type="text" class="register-input" id="search" placeholder="Search"> -->
-        <!-- <input tpye="text" class="register-input" id="location" placeholder="Location"> -->
         <p id="error"></p>
         <button type="button" onclick="searchProjects()" value="search" class="register-button">search</button>
         <option></option>
@@ -109,7 +107,7 @@
                             cell5.innerHTML = snapshot.val()[userKeys[x]]["lowestBid"]
                             cell6.innerHTML = snapshot.val()[userKeys[x]]["description"]
 
-                            button.innerHTML = '<form action="/projectDetails" method="post"> <input type="text" style="display:none" name="name" class="register-input" value="'+ snapshot.val()[userKeys[x]]["name"] + '"> <input type="text" style="display:none" name="category" class="register-input" value="'+ snapshot.val()[userKeys[x]]["category"] + '"> <input type="text" style="display:none" name="location" class="register-input" value="'+ snapshot.val()[userKeys[x]]["location"] + '"> <input type="text" style="display:none" name="service" class="register-input" value="'+ snapshot.val()[userKeys[x]]["service"] + '"> <input type="text" style="display:none" name="lowestBid" class="register-input" value="'+ snapshot.val()[userKeys[x]]["lowestBid"] + '"> <input type="text" style="display:none" name="description" class="register-input" value="'+ snapshot.val()[userKeys[x]]["description"] + '"> <input type="text" style="display:none" name="key" class="register-input" value="' + userKeys[x] + '"> <input type="text" style="display:none" name="creator" class="register-input" value="' + snapshot.val()[userKeys[x]]["creatorId"] + '"> <button id="details" value="upvote">Details</button></form>';
+                            button.innerHTML = '<form action="/yourProjectDetails" method="post"> <input type="text" style="display:none" name="name" class="register-input" value="'+ snapshot.val()[userKeys[x]]["name"] + '"> <input type="text" style="display:none" name="category" class="register-input" value="'+ snapshot.val()[userKeys[x]]["category"] + '"> <input type="text" style="display:none" name="location" class="register-input" value="'+ snapshot.val()[userKeys[x]]["location"] + '"> <input type="text" style="display:none" name="service" class="register-input" value="'+ snapshot.val()[userKeys[x]]["service"] + '"> <input type="text" style="display:none" name="lowestBid" class="register-input" value="'+ snapshot.val()[userKeys[x]]["lowestBid"] + '"> <input type="text" style="display:none" name="description" class="register-input" value="'+ snapshot.val()[userKeys[x]]["description"] + '"> <input type="text" style="display:none" name="key" class="register-input" value="' + userKeys[x] + '"> <input type="text" style="display:none" name="creator" class="register-input" value="' + snapshot.val()[userKeys[x]]["creatorId"] + '"> <button id="details" value="upvote">Details</button></form>';
                         }
                     });
                 });
@@ -132,25 +130,27 @@
 
             firebase.database().ref('/projects').once('value').then(function(snapshot) {
                 for (var x=0; x < snapshot.numChildren(); x++){
-                    var table = document.getElementById("projectsTable");
+                    if(snapshot.val()[keys[x]]["open"] == true){
+                        var table = document.getElementById("projectsTable");
 
-                    var row = table.insertRow(0);
-                    var cell1 = row.insertCell(0);
-                    var cell2 = row.insertCell(1);
-                    var cell3 = row.insertCell(2);
-                    var cell4 = row.insertCell(3);
-                    var cell5 = row.insertCell(4);
-                    var cell6 = row.insertCell(5);
-                    var button = row.insertCell(6);
+                        var row = table.insertRow(0);
+                        var cell1 = row.insertCell(0);
+                        var cell2 = row.insertCell(1);
+                        var cell3 = row.insertCell(2);
+                        var cell4 = row.insertCell(3);
+                        var cell5 = row.insertCell(4);
+                        var cell6 = row.insertCell(5);
+                        var button = row.insertCell(6);
 
-                    cell1.innerHTML = snapshot.val()[keys[x]]["name"]
-                    cell2.innerHTML = snapshot.val()[keys[x]]["category"]
-                    cell3.innerHTML = snapshot.val()[keys[x]]["location"]
-                    cell4.innerHTML = snapshot.val()[keys[x]]["service"];
-                    cell5.innerHTML = snapshot.val()[keys[x]]["lowestBid"]
-                    cell6.innerHTML = snapshot.val()[keys[x]]["description"]
+                        cell1.innerHTML = snapshot.val()[keys[x]]["name"]
+                        cell2.innerHTML = snapshot.val()[keys[x]]["category"]
+                        cell3.innerHTML = snapshot.val()[keys[x]]["location"]
+                        cell4.innerHTML = snapshot.val()[keys[x]]["service"];
+                        cell5.innerHTML = snapshot.val()[keys[x]]["lowestBid"]
+                        cell6.innerHTML = snapshot.val()[keys[x]]["description"]
 
-                    button.innerHTML = '<form action="/projectDetails" method="post"> <input type="text" style="display:none" name="name" class="register-input" value="'+ snapshot.val()[keys[x]]["name"] + '"> <input type="text" style="display:none" name="category" class="register-input" value="'+ snapshot.val()[keys[x]]["category"] + '"> <input type="text" style="display:none" name="location" class="register-input" value="'+ snapshot.val()[keys[x]]["location"] + '"> <input type="text" style="display:none" name="service" class="register-input" value="'+ snapshot.val()[keys[x]]["service"] + '"> <input type="text" style="display:none" name="lowestBid" class="register-input" value="'+ snapshot.val()[keys[x]]["lowestBid"] + '"> <input type="text" style="display:none" name="description" class="register-input" value="'+ snapshot.val()[keys[x]]["description"] + '"> <input type="text" style="display:none" name="key" class="register-input" value="' + keys[x] + '"> <input type="text" style="display:none" name="key" class="register-input" value="' + keys[x] + '"><input type="text" style="display:none" name="creator" class="register-input" value="' + snapshot.val()[keys[x]]["creatorId"] + '"> <button id="details" value="upvote">Details</button></form>';
+                        button.innerHTML = '<form action="/projectDetails" method="post"> <input type="text" style="display:none" name="name" class="register-input" value="'+ snapshot.val()[keys[x]]["name"] + '"> <input type="text" style="display:none" name="category" class="register-input" value="'+ snapshot.val()[keys[x]]["category"] + '"> <input type="text" style="display:none" name="location" class="register-input" value="'+ snapshot.val()[keys[x]]["location"] + '"> <input type="text" style="display:none" name="service" class="register-input" value="'+ snapshot.val()[keys[x]]["service"] + '"> <input type="text" style="display:none" name="lowestBid" class="register-input" value="'+ snapshot.val()[keys[x]]["lowestBid"] + '"> <input type="text" style="display:none" name="description" class="register-input" value="'+ snapshot.val()[keys[x]]["description"] + '"> <input type="text" style="display:none" name="key" class="register-input" value="' + keys[x] + '"> <input type="text" style="display:none" name="key" class="register-input" value="' + keys[x] + '"><input type="text" style="display:none" name="creator" class="register-input" value="' + snapshot.val()[keys[x]]["creatorId"] + '"> <button id="details" value="upvote">Details</button></form>';
+                    }
                 }
             })
         });
