fix sketch bug thing

--- a/views/yourProjectDetails.html
+++ b/views/yourProjectDetails.html
@@ -154,7 +154,7 @@
         }
 
         var postData = {
-            user:name,
+            name:name,
             acceptedBid:bidderData,
             open:false,
             service: service,
