framework for hired for

--- a/views/register.html
+++ b/views/register.html
@@ -48,7 +48,8 @@
                     if (user) {
                         firebase.database().ref('users/' + user.uid).set({
                             username: document.getElementById("username").value,
-                            age: document.getElementById("age").value
+                            age: document.getElementById("age").value,
+                            email: document.getElementById("email").value
                         }).then(function(){
                             firebase.auth().signInWithEmailAndPassword(document.getElementById("email").value, document.getElementById("password").value).then(function(){ 
                                 var user = firebase.auth().currentUser;
