--- a/views/profile.html
+++ b/views/profile.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <!--[if lt IE 7]> <html class="lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]> <html class="lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]> <html class="lt-ie9" lang="en"> <![endif]-->
@@ -34,14 +34,16 @@
 <body>
     <label id="username"></label><br>
     <button><a href="/createProject"> New Project</a></button>
+    <br><br>
 
     <label> Your Projects</label><br>
     <table id="yourTable" border="1"></table>
     <br><br>
 
-    <label> Projects </label><br>
-    <table id="projectsTable" border="1">
+    <label> Hired for </label> <br>
+    <table id="hiredTable" border="1">
     </table>
+    <br><br>
 
     <form class="search">
         <input type="text" class="register-input" id="searchProject" placeholder="search">
@@ -54,7 +56,15 @@
         <button type="button" onclick="searchProjects()" value="search" class="register-button">search</button>
         <option></option>
     </form>
+
+    <label> Projects </label><br>
+    <table id="projectsTable" border="1">
+    </table>
+    <br><br>
+
+    <button onclick="logout()">Logout </button>
     <a href="/login" id="notLoggedIn" style="display:none"> </a>
+    <a href="/" id="logout" style="display:none"> </a>
 
     <script>
         var config = {
@@ -66,6 +76,7 @@
         };
         firebase.initializeApp(config);
 
+        var userId = ""
         firebase.auth().onAuthStateChanged(function(user) {
             if (user) {
                 userId = firebase.auth().currentUser.uid;
@@ -100,6 +111,7 @@
                             console.log(snapshot.val()[userKeys[x]])
 
                             cell1.innerHTML = snapshot.val()[userKeys[x]]["name"]
+                            console.log(snapshot.val()[userKeys[x]]["name"]);
                             cell2.innerHTML = snapshot.val()[userKeys[x]]["category"]
                             cell3.innerHTML = snapshot.val()[userKeys[x]]["location"]
                             cell4.innerHTML = snapshot.val()[userKeys[x]]["service"];
@@ -154,6 +166,51 @@
             })
         });
 
+        userId = firebase.auth().currentUser.uid;
+        firebase.database().ref('/users/' + userId).once('value').then(function(snapshot) {
+            var username = snapshot.val()["username"];
+            document.getElementById("username").innerHTML = username
+        });
+
+        var userKeys = [];
+        var query2 = firebase.database().ref("users/" + userId + '/projects').orderByKey();
+        query2.once("value")
+        .then(function(snapshot) {
+            snapshot.forEach(function(childSnapshot) {
+                var key = childSnapshot.key;
+                console.log(key)
+                userKeys.push(key);
+            });
+
+            firebase.database().ref('/users/' + userId + '/worker').once('value').then(function(snapshot) {
+
+                for (var x=0; x < snapshot.numChildren(); x++){
+                    var table = document.getElementById("hiredTable");
+
+                    var row = table.insertRow(0);
+                    var cell1 = row.insertCell(0);
+                    var cell2 = row.insertCell(1);
+                    var cell3 = row.insertCell(2);
+                    var cell4 = row.insertCell(3);
+                    var cell5 = row.insertCell(4);
+                    var cell6 = row.insertCell(5);
+                    var cell7 = row.insertCell(6);
+                    var button = row.insertCell(7);
+                    console.log(snapshot.val()[userKeys[x]])
+
+                    cell1.innerHTML = snapshot.val()[userKeys[x]]["name"]
+                    cell2.innerHTML = snapshot.val()[userKeys[x]]["category"]
+                    cell3.innerHTML = snapshot.val()[userKeys[x]]["location"]
+                    cell4.innerHTML = snapshot.val()[userKeys[x]]["service"];
+                    cell5.innerHTML = snapshot.val()[userKeys[x]]["lowestBid"]
+                    cell6.innerHTML = snapshot.val()[userKeys[x]]["description"]
+                    cell7.innerHTML = snapshot.val()[userKeys[x]]["creatorEmail"]
+
+                    button.innerHTML = '<form action="/doneWithProject" method="post"> <input type="text" style="display:none" name="name" class="register-input" value="'+ snapshot.val()[userKeys[x]]["name"] + '"> <input type="text" style="display:none" name="category" class="register-input" value="'+ snapshot.val()[userKeys[x]]["category"] + '"> <input type="text" style="display:none" name="location" class="register-input" value="'+ snapshot.val()[userKeys[x]]["location"] + '"> <input type="text" style="display:none" name="service" class="register-input" value="'+ snapshot.val()[userKeys[x]]["service"] + '"> <input type="text" style="display:none" name="lowestBid" class="register-input" value="'+ snapshot.val()[userKeys[x]]["lowestBid"] + '"> <input type="text" style="display:none" name="description" class="register-input" value="'+ snapshot.val()[userKeys[x]]["description"] + '"> <input type="text" style="display:none" name="key" class="register-input" value="' + userKeys[x] + '"> <input type="text" style="display:none" name="creator" class="register-input" value="' + snapshot.val()[userKeys[x]]["creatorId"] + '"> <button id="details">Finished</button></form>';
+                }
+            });
+        });
+
         function searchProjects(){
             var keys = [];
             var searchType = document.getElementById("searchType").value
@@ -162,6 +219,7 @@
             while(table.rows.length > 0) {
                 table.deleteRow(0);
             }   
+
 
             var query = firebase.database().ref("projects").orderByKey();
             query.once("value")
@@ -202,6 +260,15 @@
                 });
             });
         }
+
+        function logout(){
+            firebase.auth().signOut().then(function() {
+                window.location = document.getElementById("logout").href
+            }, function(error) {
+                console.log(error);
+            });
+        }
+
     </script>
 
 </body>
